<resources>
    <string name="app_name">DreamSalonFinderApp</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!--Created Strings for search parameters -->

    <string name="haircut">haircut</string>
    <string name="shampoo">Shampoo</string>
    <string name="styling">Styling</string>
    <string name="clipper_shave">Clippers</string>
    <string name="beard_color">Beard Color</string>
    <string name="straight_razor">Straight Razor</string>
    <string name="hair_coloring">Hair Coloring</string>
    <string name="face_mask">Haircut</string>
    <string name="mani_pedi">Manicure/Pedicure</string>

    <string name="services">Services</string>
    <string name="add_to_services">Start Search</string>
    <string name="search_hint">Search...</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_phone">Enter phone</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>

</resources>