<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
  >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical">



        <TextView
            android:id="@+id/services_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:elevation="10dp"
            android:gravity="center"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:text="Services Breakdown"
            android:textSize="25sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_weight="0.4"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">


                <ImageButton
                    android:id="@+id/basic_service1_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/gray"
                    android:scaleType="fitCenter"
                    android:src="@drawable/scissors_icon" />

                <TextView
                    android:id="@+id/basic_service_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/basic_service1_img"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/haircut"
                    android:textAlignment="center"
                    android:textSize="12sp"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.4"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">


                <ImageView
                    android:id="@+id/basic_service2_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/gray"
                    android:src="@drawable/shampoo_icon"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:id="@+id/basic_service2_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/basic_service2_img"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/shampoo"
                    android:textAlignment="center"
                    android:textSize="12sp"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_marginTop="0dp"
            android:layout_weight="0.4"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/basic_service3_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerHorizontal="true"
                    android:background="@color/gray"
                    android:src="@drawable/styling_icon"
                    android:scaleType="fitCenter"/>
                <TextView
                    android:id="@+id/basic_service3_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/basic_service3_img"
                    android:layout_centerInParent="true"
                    android:includeFontPadding="false"
                    android:text="@string/styling"
                    android:textAlignment="center"
                    android:textSize="12sp"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="0dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/hommes_img"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray"
                    android:src="@drawable/man_pic"/>

                <ImageView
                    android:id="@+id/service1"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignEnd="@id/hommes_img"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="-44dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/service1_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="45dp"
                    android:text="@string/clipper_shave"
                    android:textAlignment="center"/>
                <ImageView android:id="@+id/service2"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service1"
                    android:layout_alignRight="@id/hommes_img"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="-44dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/service2_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service1_txt"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="45dp"
                    android:text="@string/beard_color"
                    android:textAlignment="center"/>

                <ImageView
                    android:id="@+id/service3"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service2"
                    android:layout_alignRight="@id/hommes_img"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="-44dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/service3_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service2_txt"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="45dp"
                    android:text="@string/straight_razor"
                    android:textAlignment="center"/>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_marginStart="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/femmes_img"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:background="@color/gray"
                    android:gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/woman_pic" />


                <!--
                <ImageView
                    android:id="@+id/service1f"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignEnd="@id/femmes_img"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="-44dp"
                    android:background="@color/gray"/>

                <TextView android:id="@+id/service1f_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="45dp"
                    android:text="@string/hair_coloring"
                    android:layout_alignParentEnd="true"/>

                <ImageView
                    android:id="@+id/service2f"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service1f"
                    android:layout_alignEnd="@id/femmes_img"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="-44dp"
                    android:background="@color/gray"/>
                <TextView
                    android:id="@+id/service2f_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/service1f_txt"
                    android:layout_marginEnd="45dp"
                    android:text="@string/face_mask"
                    android:layout_alignParentEnd="true"/>

                <ImageView
                    android:id="@+id/service3f"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service2f"
                    android:layout_alignEnd="@id/femmes_img"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="-44dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/service3f_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service2f_txt"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="45dp"
                    android:text="Service 3"
                    android:textAlignment="center" />
                -->
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="0dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_marginStart="150dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_centerInParent="true"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/enfants_img"
                    android:layout_width="85dp"
                    android:layout_height="85dp"
                    android:background="@color/gray"
                    android:scaleType="centerCrop"
                    android:src="@drawable/family_pic" />

                <!--
                <ImageView
                    android:id="@+id/service1e"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignRight="@id/enfants_img"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="-44dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/service1e_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="45dp"
                    android:text="Service 1"
                    android:layout_alignParentRight="true"/>

                <ImageView
                    android:id="@+id/service2e"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service1e"
                    android:layout_alignRight="@id/enfants_img"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="-44dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/service2e_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/service1e_txt"
                    android:layout_marginRight="45dp"
                    android:text="Service 2"
                    android:layout_alignParentRight="true"/>

                <ImageView
                    android:id="@+id/service3e"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_below="@id/service2e"
                    android:layout_alignRight="@id/enfants_img"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="-44dp"
                    android:background="@color/gray"/>

                <TextView
                    android:id="@+id/service3e_txt"
                    android:layout_width="145dp"
                    android:layout_height="25dp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/service2e_txt"
                    android:layout_marginEnd="45dp"
                    android:text="Service 3"
                    android:layout_alignParentEnd="true"/>
                    -->
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="50dp"
            android:backgroundTint="@color/gray"
            android:text="Search"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <!--  <Button
            android:id="@+id/goBackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/searchBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="185dp"
            android:layout_marginEnd="25dp"
            android:backgroundTint="@color/gray"
            android:text="Go Back"
            android:textColor="@color/black"
            android:textSize="15sp" />   -->

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottomNavigationView"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="bottom"
            app:menu="@menu/bottom_nav_menu" />
    </LinearLayout>


</LinearLayout>
</ScrollView>